Prevent grid items from stretching to fill entire cell

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -71,6 +71,7 @@ main {
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
   grid-gap: 1.5rem;
+  align-items: start;
   flex-grow: 1;
   flex-basis: 0;
 }
